tests/samples/invalid/missing_mandatory_type.pn

const X = true;

fn foo(param) -> i32
{
	return: param
}

struct Bar
{
	member
}
